[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Images/Snowflake.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Snowflake2.png" type="Texture" id=2]
[ext_resource path="res://snowing.gd" type="Script" id=3]

[node name="snowing" type="Node2D"]
script = ExtResource( 3 )

[node name="snow1" type="CPUParticles2D" parent="."]
position = Vector2( 512, 0 )
emitting = false
amount = 4
lifetime = 4.0
texture = ExtResource( 1 )
emission_shape = 2
emission_rect_extents = Vector2( 512, 1 )
initial_velocity = 20.0

[node name="snow2" type="CPUParticles2D" parent="."]
position = Vector2( 512, 0 )
emitting = false
amount = 15
lifetime = 5.0
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 512, 1 )
initial_velocity = 19.87
initial_velocity_random = 1.0

[node name="snow3" type="CPUParticles2D" parent="."]
position = Vector2( 512, 0 )
amount = 1
lifetime = 5.0
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 512, 1 )
initial_velocity = 19.87
initial_velocity_random = 1.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="BlizzardTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="BlizzardTimer" to="." method="_on_BlizzardTimer_timeout"]
